--- a/metadata.yaml
+++ b/metadata.yaml
@@ -39,5 +39,6 @@ subjects:
 - !lcsh 'Seneca Indians -- Kings and rulers -- Biography'
 - !lcc 'E011'
 - !lcsh 'Iroquois Indians -- Government relations'
+- GITenberg
 title: An Account of Sa-Go-Ye-Wat-Ha, or Red Jacket, and His People, 1750-1830
 url: http://www.gutenberg.org/ebooks/7339
